# YCH_ros2_ws

./: README.md
aws-robomaker-hospital-world/launch/: view_hospital_with_robot_combi.launch.py
aws_robomaker_hospital_world/launch/: view_hospital_with_robot.launch.py
cob_hardware_config/: CMakeLists.txt  package.xml
cob_hardware_config/launch/: display_robot.launch.py  gazebo.launch.py  gazebo_launch_0410.launch.py  gazebo_robot.launch.py  gazebo_tricyclesim.launch.py
cob_hardware_config/robots/cob4-25/config/: base_planar_sim.yaml  torso_ros2_controller.yaml  tricycle_drive_controller.yaml
cob_hardware_config/robots/cob4-25/urdf/: cob4-25-no-arm.urdf.xacro  cob4-25.urdf  cob4-25_base.urdf  cob4-25_base.urdf.xacro  cob4-25_torso.urdf  cob4-25_torso.urdf.xacro  properties_base.urdf.xacro
cob_robot_trad/config/: bridge1_params.yaml  bridge_join_sim.yaml  bridge_only_params.yaml  navi_robot.yaml  slam_toolbox_params.yaml  slam_toolbox_params_slam_only.yaml
cob_robot_trad/launch/: cob_combi_robot.launch.py  cob_slam_robot.launch.py  ros1_bridge_only.launch.py
cob_sim_trad/: CMakeLists.txt
cob_sim_trad/config/: cob_arm_0415.yaml  mapper_hospital.yaml  mapper_params_cob_0409.yaml  navi_cob_drive.yaml  navi_hospital.yaml  navi_speedup.yaml  slam_params_slam_only.yaml
cob_sim_trad/launch/: cob_combi_join_sim.launch.py  cob_combi_sim.launch.py  cob_combi_sim_0614.launch.py  cob_gazebo.launch.py  cob_navi_only.launch.py  cob_navi_sim.launch.py  cob_navi_sim_0614.launch.py  cob_slam_sim.launch.py  cob_slam_sim_0614.launch.py  cob_teleop_sim.launch.py
cob_sim_trad/map/aws_hospital/: aws_hospital_0708.pgm  aws_hospital_0708.yaml
cob_sim_trad/map/ipa_cobLab/: map_0614_complete.data  map_0614_complete.pgm  map_0614_complete.yaml
cob_sim_trad/src/: torso_teleop_node.py
cob_sim_trad/world/: emptyroom_with_walls_standing_person.world  room_0621.world  room_0701.world
ros2_behavior_tree_example/: package.xml
ros2_behavior_tree_example/behavior_trees/cob_robot/: combi_test_with_Navi_sim.xml  sound_test.xml
ros2_behavior_tree_example/behavior_trees/cob_sim/: combi_test.xml  combi_test_with_Navi_sim.xml  light_mimic_test.xml  navi_hospital_sim.xml  sim_test.xml
ros2_behavior_tree_example/launch/: cob_bt_lifecycle.launch.py
ros2_laser_scan_merger/: package.xml
ros2_laser_scan_merger/launch/: merge_2_scan.launch.py  merge_3_scan_cob.launch.py
yolobot_recognition/: CMakeLists.txt
yolobot_recognition/launch/: launch_yolov8.launch.py  launch_yolov8_sim.launch.py
yolobot_recognition/scripts/: yolov8_ros2_pt.py  yolov8_ros2_pt_sim.py
